[tool.poetry]
name = "final year project"
version = "0.1.0"
description = ""
authors = ["Maruf Bepary <bepary71@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Mail = "^0.9.1"
attrs = "^22.1.0"
environs = "^9.5.0"
PyMySQL = "^1.0.2"
cryptography = "^38.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
